# fribidi

./: .gitignore  CMakeLists.txt  configure.ac  notes.org
cmake/: fribidi-config.cmake
fribidi-vs-unicode/: SConstruct  test-character.c  test.c
gen.tab/: gen-arabic-shaping-tab.c  gen-bidi-type-tab.c  gen-joining-type-tab.c  gen-mirroring-tab.c  gen-unicode-version.c  packtab.c
gen.tab/unidata/: ArabicShaping.txt  ReadMe.txt
lib/: common.h  fribidi-arabic.c  fribidi-bidi-types-list.h  fribidi-bidi-types.h  fribidi-bidi.c  fribidi-common.h  fribidi-config.h  fribidi-config.h.in  fribidi-run.c  fribidi-unicode.h  run.h
test/: run.tests  test_CapRTL_directional.input  test_CapRTL_directional.reference  test_CapRTL_isolate.input
